FARRAGO:  set -XX:MaxPermSize=256m when running tests to fix a PermGen OOM with enki/hibernate
[git-p4: depot-paths = "//open/dev/": change = 12251]